--- a/src/app/components/customerdashboard/customerdashboard.component.html
+++ b/src/app/components/customerdashboard/customerdashboard.component.html
@@ -70,7 +70,7 @@
                                 <div class="border border-gray-300 border-dashed min-w-125px py-3 px-4 me-6 mb-3" style="margin-left: 20px;box-shadow: 20px 20px 80px rgb(218,218,218);margin-top: 30px;margin: 20px;
         border-radius: 40px;">
                                     <div class="d-flex align-items-center">
-                                        <div class=" fw-bold">{{ user?.role }}</div>
+                                        <div class=" fw-bold">{{ user?.rolename }}</div>
                                     </div>
                                     <div class="fw-semibold fs-6 text-gray-400">ROLE</div>
                                 </div>
