--- a/src/app/components/myprofile/myprofile.component.html
+++ b/src/app/components/myprofile/myprofile.component.html
@@ -1,11 +1,19 @@
-<div class="my-profile body-content">
-    <div class="content-area">
+<div class="my-profile body-content" style="background-color: whitesmoke;">
+    <div class="content-area" >
       <div class="my-profile-heading">
         <h1 class="heading">My Profile</h1>
       </div>
-        <div class="account">
+        <div class="account" style="border-radius: 20px;">
           <div class="label-group">
-            <label>First Name</label>
+            <label>Fast Name</label>
+            <p>{{ fullName }}</p>
+          </div>
+          <div class="label-group">
+            <label>Last Name</label>
+            <p>{{ fullName }}</p>
+          </div>
+          <div class="label-group">
+            <label>User Name</label>
             <p>{{ fullName }}</p>
           </div>
           <div class="label-group">
@@ -14,24 +22,16 @@
           </div>
           <div class="label-group">
             <label>Email</label>
-            <p>debasishp@smbxl.com</p>
+            <p>{{email}}</p>
           </div>
+         
           <div class="label-group">
-            <label>Company Name</label>
-            <p>smbxl</p>
+            <label>Role</label>
+            <p>{{role}}</p>
           </div>
-          <div class="label-group">
-            <label>Company Website Address</label>
-            <p>www.smbxl.com</p>
-          </div>
-          <div class="label-group">
-            <label>Advisor Type</label>
-            <!-- <div *ngFor="let item of this.advisorType?.data">
-              <p *ngIf="item.id===data?.fcAdvisorType">{{ item.value }}</p>
-            </div> -->
-          </div>
-          <button class="primary_btn" type="button" data-bs-toggle="modal" data-bs-target="#exampleModal" >Edit</button>
-          <!-- (click)="editprofilepopup()" -->
+          
+          <button  class="primary_btn" type="button" data-bs-toggle="modal" data-bs-target="#exampleModal" >Edit</button>  
+         
         </div>
         </div>
       </div>
@@ -42,7 +42,7 @@
             <div class="modal-content">
                 <div class="modal-header">
                     <p class="modal-title" id="exampleModalLabel"> <span style="font-size: 25px;font-weight:700">Update Your Details</span><br>
-                        <small>Please Update your details</small>
+                        <!-- <small>Please Update your details</small> -->
                     </p>
     
                     <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
@@ -52,6 +52,11 @@
                 <div class="modal-body">
                     <div class="form-group pt-3">
                         <div class="input-field"> <input  type="text" placeholder="First Name"
+                                class="form-control form-control" style="border-radius: 10px;" value="{{ fullName }}">
+                        </div>
+                    </div>
+                    <div class="form-group pt-3">
+                        <div class="input-field"> <input  type="text" placeholder="Last Name"
                                 class="form-control form-control" style="border-radius: 10px;" value="{{ fullName }}">
                         </div>
                     </div>
