--- a/src/styles.css
+++ b/src/styles.css
@@ -2113,3 +2113,6 @@ pdf-viewer {height: 80vh;}
  
 html, body { height: 100%; }
 body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
+
+html, body { height: 100%; }
+body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
