--- a/src/app/components/createbclogin/createbclogin.component.html
+++ b/src/app/components/createbclogin/createbclogin.component.html
@@ -1,4 +1,4 @@
-<div class="outer" style="overflow-y: scroll;">
+<div class="outer" style="overflow-y: scroll; background-color: whitesmoke;" >
     <div class="container" >
         <div class="row">
             <div class="offset-md-2  col-md-7 offset offset-md-3">
