--- a/src/app/components/customerlist/customerlist.component.css
+++ b/src/app/components/customerlist/customerlist.component.css
@@ -1,74 +1,40 @@
 .search {
-    flex: 3;
-    display: flex;
-    justify-content: center;
-}
-.search input[type=text] {
-    border: none;
-    background: #f1f1f1;
+    text-align: center;
+    margin-top: 20px;
+  }
+
+  .search-input {
+    border-radius: 20px;
     padding: 10px;
-    width: 50%;
-}
-.search button {
-    width: 40px;
-    height: 40px;
-    border: none;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-}
- .search button img {
-    width: 30px;
-    height: 30px;
-}
+  }
 
-.search {
-    position: relative;
-}
-
-.search-input {
-    padding-right: 30px; /* Adjust the value as needed to create space for the icon */
-}
-
-
-
-* {
-    /* Change your font family */
-    font-family: sans-serif;
-}
-
-.content-table {
+  .content-table {
+    margin: 0 auto;
+    margin-top: 80px;
     border-collapse: collapse;
-    margin: 25px 0;
-    font-size: 0.9em;
-    min-width: 400px;
-    border-radius: 5px 5px 0 0;
-    overflow: hidden;
-    box-shadow: 0 0 20px rgba(0, 0, 0, 0.15);
-}
+    width: 100%;
+  }
 
-.content-table thead tr {
-    background-color: #ddd;
-    color: black;
+  .content-table th, .content-table td {
+    padding: 10px;
+    border: 1px solid #ccc;
     text-align: left;
-    font-weight: bold;
-}
+  }
 
-.content-table th,
-.content-table td {
-    padding: 52px 92px;
-}
+  .content-table th {
+    background-color: #f2f2f2;
+  }
 
-.content-table tbody tr {
-    border-bottom: 1px solid #dddddd;
-}
+  .content-table tr:nth-child(even) {
+    background-color: #f2f2f2;
+  }
 
-.content-table tbody tr:nth-of-type(even) {
-    background-color: #f3f3f3;
-}
+  .content-table tr:hover {
+    background-color: #e0e0e0;
+  }
 
-.content-table tbody tr:last-of-type {
-    border-bottom: 2px solid #dddddd;
-}
-
-
+  a {
+    text-decoration: none;
+    text-transform: uppercase;
+    color: #0074d9;
+  }
