--- a/src/app/components/customerlist/customerlist.component.html
+++ b/src/app/components/customerlist/customerlist.component.html
@@ -1,28 +1,49 @@
 
+<div class="card mb-7" style="background-color:  gainsboro;margin: 20px;margin-left: 40px;margin-right: 40px;">
+  <!--begin::Card body-->
+  <div class="card-body">
+      <!--begin::Compact form-->
+      <div class="d-flex align-items-center">
+          <form name="filter" id="filter" >
+          <!--begin::Input group-->
+          
+          <table>
+            <tbody><tr><th>
+            <input [(ngModel)]="searchQuery" type="text" style="width:500px;" class="form-control form-control-solid" id="fname1" name="fname1" placeholder="Search Customers">
+            <span *ngIf="searchAttempted && !isSearchValid()" id="warning-message" style="color: red;font-size: 15px;">Length is short, minimum length required is 3.</span>
+            </th>
+            <th>&nbsp;&nbsp;&nbsp;&nbsp;</th>
+        <!--end::Input group-->
+        <!--begin:Action-->
+        <th class="d-flex align-items-center">
+            <input (click)="search()" name="search_filter" type="submit" value="Search" title="Search" id="search_filter" class="btn btn-primary me-5">
+           
+            
+        </th></tr></tbody></table>
+        <!--end:Action-->
+       
+          </form>
 
-<div class="search">
-  <input type="text" [(ngModel)]="searchQuery" (input)="search()"  class="search-input" style="border-radius: 20px;" placeholder="search customers...">
-  <!-- <i class="fas fa-search search-icon"></i> -->
-  <!-- <span></span> -->
+      </div>
+  </div>
 </div>
-
 
 
 <!DOCTYPE html>
 <html lang="en">
 
-<body>
-  <table class="content-table" style=" margin: 0 auto; margin-top: 80px;">
-      <thead>
-        <tr>
-          <!-- <th>Rank</th> -->
-          <th>ID</th>
-          <th>firstname</th>
-          <th>lastname</th>
-          <th>rolename</th>
-          <th>Email</th>
-        </tr>
-      </thead>
+<body >
+  <table *ngIf="users.length > 0" class="content-table" style="margin: 40px; margin-top: 80px;box-shadow: 80px 80px 100px rgb(218,218,218); border-radius: 50px;">
+    <thead >
+      <tr >
+        <!-- <th>Rank</th> -->
+        <th style="color: gray;">ID</th>
+        <th style="color: gray;">FIRST NAME</th>
+        <th style="color: gray;">LAST NAME</th>
+        <th style="color: gray;">ROLE</th>
+        <th style="color: gray;">EMAIL</th>
+      </tr>
+    </thead>
       <tbody>
           <tr *ngFor="let user of users | slice: (currentPage - 1) * pageSize : (currentPage - 1) * pageSize + pageSize">
             <td><a [routerLink]="['/home/customerdashboard', user.id]" style="text-transform: uppercase;">{{ user.id }}</a></td>
@@ -33,8 +54,57 @@
           </tr>
         </tbody>
     </table>
+    <div *ngIf="noDataAvailable && searchAttempted && users.length === 0" style="margin: 20px; color: red;">
+      No data available.
+    </div>
   </body>
   <div>
-    <pagination-controls (pageChange)="onPageChange($event)" [itemsPerPage]="pageSize" [totalItems]="users.length"></pagination-controls>
+    <div *ngIf="users.length > 0" class="pagination">
+      <button [disabled]="currentPage === 1" (click)="previousPage()" style="border: none;"><</button>
+      <span>{{ currentPage }} / {{ totalPages }}</span>
+      <button [disabled]="currentPage === totalPages" (click)="nextPage()" style="border: none;">></button>
+    </div>
+    
   </div>    
 </html>
+
+
+
+
+
+<div class="mat-elevation-z8">
+  <table mat-table >
+
+    <!-- Position Column -->
+    <ng-container matColumnDef="position">
+      <th mat-header-cell *matHeaderCellDef> No. </th>
+      <td mat-cell *matCellDef="let element"> {{element.position}} </td>
+    </ng-container>
+
+    <!-- Name Column -->
+    <ng-container matColumnDef="name">
+      <th mat-header-cell *matHeaderCellDef> Name </th>
+      <td mat-cell *matCellDef="let element"> {{element.name}} </td>
+    </ng-container>
+
+    <!-- Weight Column -->
+    <ng-container matColumnDef="weight">
+      <th mat-header-cell *matHeaderCellDef> Weight </th>
+      <td mat-cell *matCellDef="let element"> {{element.weight}} </td>
+    </ng-container>
+
+    <!-- Symbol Column -->
+    <ng-container matColumnDef="symbol">
+      <th mat-header-cell *matHeaderCellDef> Symbol </th>
+      <td mat-cell *matCellDef="let element"> {{element.symbol}} </td>
+    </ng-container>
+
+    <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+    <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
+  </table>
+
+  <mat-paginator [pageSizeOptions]="[5, 10, 20]"
+                 showFirstLastButtons
+                 aria-label="Select page of periodic elements">
+  </mat-paginator>
+</div>
