--- a/src/app/components/login/login.component.html
+++ b/src/app/components/login/login.component.html
@@ -7,24 +7,26 @@
             <img src="/assets/familycentral-logo.svg" alt="Website Logo" class="mb-3" width="150">
             <h2 class="heading2 mb-3">Welcome to Family Central Backoffice</h2>
             <form [formGroup]="loginForm">
-                <div class="form-group mb-3"
-                    [class.error]="loginForm.controls['username'].dirty && loginForm.hasError('required','username')">
-                    <input formControlName="username" type="email" class="form-control form-control-lg" id="username"
-                        name="email" placeholder="Username" required>
-                    <!-- <span class="fa fa-user" style="position: absolute; top: 50%; transform: translateY(-50%); left: 15px;"></span> -->
+                <div class="form-group mb-3 position-relative">
+                    <span class="fa fa-user" style="position: absolute; top: 50%; transform: translateY(-50%); left: 15px;opacity: 0.5;"></span>
+                    <input formControlName="username" type="email" class="form-control form-control-lg pl-5" id="username" name="email" placeholder="Username" required>
                 </div>
+                
                 <small *ngIf="loginForm.controls['username'].dirty && loginForm.hasError('required','username')"
                     class="text-danger">*Username is required</small>
-                <div class="form-group mb-3"
-                    [class.error]="loginForm.controls['password'].dirty && loginForm.hasError('required','password')">
-                    <input formControlName="password" type="password" class="form-control form-control-lg" id="password"
-                        placeholder="password" required>
-                    <!-- <span class="fa fa-lock" style="position: absolute; top: 50%; transform: translateY(-50%); left: 15px;"></span> -->
-                </div>
+                    <div class="form-group mb-3 position-relative">
+                        <span class="fa fa-lock" style="position: absolute; top: 50%; transform: translateY(-50%); left: 15px;opacity: 0.5;"></span>
+                        <input formControlName="password" [type]="type" class="form-control form-control-lg pl-5" id="password" placeholder="password" required>
+                        <span (click)="hideShowPass()" class="fa {{eyeIcon}}" style="position: absolute; top: 50%; transform: translateY(-50%); right: 15px; cursor: pointer;opacity: 0.5;"></span>
+                    </div>
+                    
+
+
+                
 
                 <small *ngIf="loginForm.controls['password'].dirty && loginForm.hasError('required','password')"
                     class="text-danger">*Password is required</small>
-
+                    
 
                 <div class="form-group mb-3 forgot-pass">
                     <div class="form-inline fr mt-4"> <a id="forgot" data-bs-toggle="modal"
