--- a/src/app/components/support/support.component.html
+++ b/src/app/components/support/support.component.html
@@ -26,7 +26,7 @@
           </tr>
           <tr>
             <!-- <td>3</td> -->
-            <td>Mrudula Kasibatta</td>
+            <td>Mrudula Krutibash</td>
             <td>Project Manager</td>
             <td>mrudula@smbxl.com</td>
             <span></span>
