--- a/src/app/components/customerlist/customerlist.component.html
+++ b/src/app/components/customerlist/customerlist.component.html
@@ -33,37 +33,67 @@
 <html lang="en">
 
 <body >
-  <table *ngIf="users.length > 0" class="content-table" style="margin: 40px; margin-top: 80px;box-shadow: 80px 80px 100px rgb(218,218,218); border-radius: 50px;">
-    <thead >
-      <tr >
-        <!-- <th>Rank</th> -->
-        <th style="color: gray;">ID</th>
-        <th style="color: gray;">FIRST NAME</th>
-        <th style="color: gray;">LAST NAME</th>
-        <th style="color: gray;">ROLE</th>
-        <th style="color: gray;">EMAIL</th>
-      </tr>
-    </thead>
-      <tbody>
-          <tr *ngFor="let user of users | slice: (currentPage - 1) * pageSize : (currentPage - 1) * pageSize + pageSize">
-            <td><a [routerLink]="['/home/customerdashboard', user.id]" style="text-transform: uppercase;">{{ user.id }}</a></td>
-            <td>{{ user.firstname }}</td>
-            <td>{{ user.lastname }}</td>
-            <td>{{ user.rolename }}</td>
-            <td>{{ user.email }}</td>
-          </tr>
-        </tbody>
+  <div  *ngIf="users.length > 0" class="mat-elevation-z8">
+    <mat-form-field>
+      <mat-label>Filter</mat-label>
+      <input matInput placeholder="Filter" (keyup)="Filterchange($event)">
+    </mat-form-field>
+    <table *ngIf="users.length > 0" mat-table matSort [dataSource]="dataSource" id="yourDataTableId">
+
+      <!-- ID Column -->
+      <ng-container matColumnDef="id">
+        <th mat-header-cell mat-sort-header *matHeaderCellDef>ID</th>
+        <td mat-cell *matCellDef="let user"><a [routerLink]="['/home/customerdashboard', user.id]" style="text-transform: uppercase;">{{ user.id }}</a></td>
+      </ng-container>
+    
+      <!-- First Name Column -->
+      <ng-container matColumnDef="firstname">
+        <th mat-header-cell mat-sort-header *matHeaderCellDef>FIRST NAME</th>
+        <td mat-cell *matCellDef="let user">{{ user.firstname }}</td>
+      </ng-container>
+    
+      <!-- Last Name Column -->
+      <ng-container matColumnDef="lastname">
+        <th mat-header-cell  mat-sort-header *matHeaderCellDef>LAST NAME</th>
+        <td mat-cell *matCellDef="let user">{{ user.lastname }}</td>
+      </ng-container>
+    
+      <!-- Role Column -->
+      <ng-container matColumnDef="rolename">
+        <th mat-header-cell  mat-sort-header *matHeaderCellDef>ROLE</th>
+        <td mat-cell *matCellDef="let user">{{ user.rolename }}</td>
+      </ng-container>
+    
+      <!-- Email Column -->
+      <ng-container matColumnDef="email">
+        <th mat-header-cell mat-sort-header *matHeaderCellDef>EMAIL</th>
+        <td mat-cell *matCellDef="let user">{{ user.email }}</td>
+      </ng-container>
+    
+      <!-- Define columns -->
+      <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+      <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
     </table>
+  
+</div>
+<mat-paginator  [pageSizeOptions]="[5, 10, 20]"
+showFirstLastButtons
+aria-label="Select page of periodic elements">
+</mat-paginator>
+  
+ 
+
+  
     <div *ngIf="noDataAvailable && searchAttempted && users.length === 0" style="margin: 20px; color: red;">
       No data available.
     </div>
   </body>
   <div>
-    <div *ngIf="users.length > 0" class="pagination">
+    <!-- <div *ngIf="users.length > 0" class="pagination">
       <button [disabled]="currentPage === 1" (click)="previousPage()" style="border: none;"><</button>
       <span>{{ currentPage }} / {{ totalPages }}</span>
       <button [disabled]="currentPage === totalPages" (click)="nextPage()" style="border: none;">></button>
-    </div>
+    </div> -->
     
   </div>    
 </html>
@@ -72,39 +102,4 @@
 
 
 
-<div class="mat-elevation-z8">
-  <table mat-table >
 
-    <!-- Position Column -->
-    <ng-container matColumnDef="position">
-      <th mat-header-cell *matHeaderCellDef> No. </th>
-      <td mat-cell *matCellDef="let element"> {{element.position}} </td>
-    </ng-container>
-
-    <!-- Name Column -->
-    <ng-container matColumnDef="name">
-      <th mat-header-cell *matHeaderCellDef> Name </th>
-      <td mat-cell *matCellDef="let element"> {{element.name}} </td>
-    </ng-container>
-
-    <!-- Weight Column -->
-    <ng-container matColumnDef="weight">
-      <th mat-header-cell *matHeaderCellDef> Weight </th>
-      <td mat-cell *matCellDef="let element"> {{element.weight}} </td>
-    </ng-container>
-
-    <!-- Symbol Column -->
-    <ng-container matColumnDef="symbol">
-      <th mat-header-cell *matHeaderCellDef> Symbol </th>
-      <td mat-cell *matCellDef="let element"> {{element.symbol}} </td>
-    </ng-container>
-
-    <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
-    <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
-  </table>
-
-  <mat-paginator [pageSizeOptions]="[5, 10, 20]"
-                 showFirstLastButtons
-                 aria-label="Select page of periodic elements">
-  </mat-paginator>
-</div>
