--- a/src/app/components/myprofile/myprofile.component.html
+++ b/src/app/components/myprofile/myprofile.component.html
@@ -6,29 +6,31 @@
         <div class="account" style="border-radius: 20px;">
           <div class="label-group">
             <label>Fast Name</label>
-            <p>{{ fullName }}</p>
+            <p>{{ FirstName }}</p>
           </div>
           <div class="label-group">
             <label>Last Name</label>
-            <p>{{ fullName }}</p>
+            <p>{{ LastName }}</p>
           </div>
           <div class="label-group">
             <label>User Name</label>
-            <p>{{ fullName }}</p>
+            <p>{{ Username }}</p>
           </div>
           <div class="label-group">
             <label>Phone number</label>
-            <p>7978212266</p>
+            <p>{{Contact_No}}</p>
           </div>
           <div class="label-group">
             <label>Email</label>
-            <p>{{email}}</p>
+            <p>{{Email}}</p>
           </div>
          
           <div class="label-group">
             <label>Role</label>
             <p>{{role}}</p>
           </div>
+          <input type="hidden" value="{{Id}}">
+          
           
           <button  class="primary_btn" type="button" data-bs-toggle="modal" data-bs-target="#exampleModal" >Edit</button>  
          
@@ -52,27 +54,32 @@
                 <div class="modal-body">
                     <div class="form-group pt-3">
                         <div class="input-field"> <input  type="text" placeholder="First Name"
-                                class="form-control form-control" style="border-radius: 10px;" value="{{ fullName }}">
+                                class="form-control form-control" style="border-radius: 10px;" value="{{ FirstName }}">
                         </div>
                     </div>
                     <div class="form-group pt-3">
                         <div class="input-field"> <input  type="text" placeholder="Last Name"
-                                class="form-control form-control" style="border-radius: 10px;" value="{{ fullName }}">
+                                class="form-control form-control" style="border-radius: 10px;" value="{{ LastName }}">
                         </div>
                     </div>
                     <div class="form-group pt-3">
                         <div class="input-field"> <input  type="text" placeholder="Phone Number"
-                                class="form-control form-control" style="border-radius: 10px;">
+                                class="form-control form-control" style="border-radius: 10px;"value="{{ Contact_No }}">
                         </div>
                     </div>
+                   
+                    
                     <div class="form-group pt-3">
                         <div class="input-field"> <input  type="text" placeholder="Email"
-                                class="form-control form-control" style="border-radius: 10px;">
+                                class="form-control form-control" style="border-radius: 10px;"value="{{ Email }}">
                         </div>
                     </div>
+                    
                     <small  class="text-danger"></small>
                     <!-- <small class="text-danger">*Email is Invalid*</small> -->
                 </div>
+              
+                
                 <div class="modal-footer">
                     <button id="closeBtn" type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
                     <button type="button"  class="btn btn-primary">Update</button>
