--- a/src/app/components/myprofile/myprofile.component.html
+++ b/src/app/components/myprofile/myprofile.component.html
@@ -18,7 +18,7 @@
           </div>
           <div class="label-group">
             <label>Phone number</label>
-            <p>{{Contact_No}}</p>
+            <p>{{Contact}}</p>
           </div>
           <div class="label-group">
             <label>Email</label>
@@ -52,28 +52,34 @@
                 </div>
     
                 <div class="modal-body">
+                    <!-- First Name -->
                     <div class="form-group pt-3">
-                        <div class="input-field"> <input  type="text" placeholder="First Name"
-                                class="form-control form-control" style="border-radius: 10px;" value="{{ FirstName }}">
-                        </div>
+                      <div class="input-field">
+                          <input type="text" placeholder="First Name" class="form-control form-control" style="border-radius: 10px;" [(ngModel)]="FirstName" >
+                      </div>
                     </div>
+
+                    <!-- Last Name -->
                     <div class="form-group pt-3">
-                        <div class="input-field"> <input  type="text" placeholder="Last Name"
-                                class="form-control form-control" style="border-radius: 10px;" value="{{ LastName }}">
-                        </div>
+                      <div class="input-field">
+                          <input type="text" placeholder="Last Name" class="form-control form-control" style="border-radius: 10px;" [(ngModel)]="LastName">
+                      </div>
                     </div>
+
+                    <!-- Phone Number -->
                     <div class="form-group pt-3">
-                        <div class="input-field"> <input  type="text" placeholder="Phone Number"
-                                class="form-control form-control" style="border-radius: 10px;"value="{{ Contact_No }}">
-                        </div>
+                      <div class="input-field">
+                          <input type="text" placeholder="Phone Number" class="form-control form-control" style="border-radius: 10px;" [(ngModel)]="Contact">
+                      </div>
                     </div>
-                   
-                    
+
+                    <!-- Email -->
                     <div class="form-group pt-3">
-                        <div class="input-field"> <input  type="text" placeholder="Email"
-                                class="form-control form-control" style="border-radius: 10px;"value="{{ Email }}">
-                        </div>
+                      <div class="input-field">
+                          <input type="text" placeholder="Email" class="form-control form-control" style="border-radius: 10px;" [(ngModel)]="Email">
+                      </div>
                     </div>
+
                     
                     <small  class="text-danger"></small>
                     <!-- <small class="text-danger">*Email is Invalid*</small> -->
@@ -82,7 +88,7 @@
                 
                 <div class="modal-footer">
                     <button id="closeBtn" type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
-                    <button type="button"  class="btn btn-primary">Update</button>
+                    <button type="button"  class="btn btn-primary" (click)="updateProfile()">Update</button>
                 </div>
             </div>
         </div>
