--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -70,6 +70,8 @@
                             <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
                                 <!-- <li><a class="dropdown-item" >Profile</a></li> -->
                                 <!-- <li><a class="dropdown-item" >Settings</a></li> -->
+                                <li><a class="dropdown-item" [routerLink]="'myprofile'">My Profile</a></li>
+                                <li><a class="dropdown-item" [routerLink]="'support'">Support</a></li>
                                 <li><a class="dropdown-item" (click)="logout()">Logout</a></li>
                             </ul>
                         </li> 
